--- a/style/main.css
+++ b/style/main.css
@@ -319,7 +319,7 @@ body::after {
 }
 
 body {
-  background: url('../images/sequin-background-red.jpg') center center / cover no-repeat fixed;
+  background: url('../images/shimmer.png') center center / cover no-repeat fixed;
   color: #fff;
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
